merubah isi about me

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos totam saepe iusto eum ea aperiam voluptas officia quisquam dolorum error?</p>
+            <p>Ini adalah website portfolio pribadi Ashri Riswandi Djamil. Berisi profil pribadi dan tempat karya-karya tak diketahui oleh kebanyakan orang. Namun tidak mengurangi semangat saya dalam ber karya</p>
           </div>
           <div class="col-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi facilis doloribus ex enim error earum deleniti? Facilis, nam! Consequatur hic adipisci optio expedita non possimus.</p>
+            <p>Profesi harian saya sebagai pengajar di sekolah menengah pertama (SMP) salah satu yang swasta di Kota Depok. Dan juga penulis konten di blog pribadi dan sebuah platform blogging.</p>
           </div>
         </div>
       </div>
