--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Ashri Riswandi</a>
+        <img src="img/LogoPrivat.png" width="50" height="30" href="#Home" />
+
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,7 +49,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/saya.jpg" alt="Ashri Riswandi" width="150" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Ashri Riswandi</h1>
+      <h1 class="display-4">Ashri Riswandi Djamil</h1>
       <p class="lead">Teacher | Content Writer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -85,6 +87,7 @@
       </svg>
     </section>
     <!-- Akhir About -->
+
     <!-- Projects -->
     <section id="projects">
       <div class="container">
