mengganti foto di project

--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500">
-              <img src="img/project/1.jpg" class="card-img-top" alt="project 1" />
+              <img src="img/project/blkk.jpg" class="card-img-top" alt="project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Gedung Balai Latihan Kerja Komunitas Al Nahdlah. Tempat pemuda berkarya tanpa batas merupakan projek pertama kami.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="50">
-              <img src="img/project/2.jpg" class="card-img-top" alt="project 1" />
+              <img src="img/project/gdpemuda.jfif" class="card-img-top" alt="project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Gedung pemuda merupakan gedung serbaguna yang didalamnya terdapat aula pertemuan dan lantai dua terdapat kamar penginapan. Tempat melatih pemuda masa depan Indonesia emas 2045</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
-              <img src="img/project/3.jpg" class="card-img-top" alt="project 1" />
+              <img src="img/project/labkom.jpg" class="card-img-top" alt="project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Ruang komputer yang sudah terinstal jaringan lokal. Namun berwawasan global dengan adanya koneksi internet broadband. Memungkin pemuda untuk belajar dan berkarya tanpa batas imajinasi.</p>
               </div>
             </div>
           </div>
