--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -112,7 +115,7 @@
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="50">
               <img src="img/project/gdpemuda.jfif" class="card-img-top" alt="project 1" />
               <div class="card-body">
-                <p class="card-text">Gedung pemuda merupakan gedung serbaguna yang didalamnya terdapat aula pertemuan dan lantai dua terdapat kamar penginapan. Tempat melatih pemuda masa depan Indonesia emas 2045</p>
+                <p class="card-text">Gedung Pemuda merupakan gedung serbaguna yang didalamnya terdapat aula pertemuan dan lantai dua terdapat kamar penginapan. Tempat melatih calon pemuda masa depan Indonesia emas 2045</p>
               </div>
             </div>
           </div>
@@ -120,7 +123,7 @@
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
               <img src="img/project/labkom.jpg" class="card-img-top" alt="project 1" />
               <div class="card-body">
-                <p class="card-text">Ruang komputer yang sudah terinstal jaringan lokal. Namun berwawasan global dengan adanya koneksi internet broadband. Memungkin pemuda untuk belajar dan berkarya tanpa batas imajinasi.</p>
+                <p class="card-text">Ruang komputer yang sudah terinstal jaringan lokal. Namun berwawasan global dengan adanya koneksi internet broadband. Memungkinkan pemuda untuk belajar dan berkarya tanpa batas imajinasi.</p>
               </div>
             </div>
           </div>
@@ -266,7 +269,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-3">
-      <p>Created With <i class="bi bi-heart-pulse-fill text-danger"></i> by <a href="https://www.instagram.com/ashri30/" class="text-white fw-bold">Ashri Riswandi</a></p>
+      <p>Created With <i class="bi bi-heart-pulse-fill text-danger"></i> by <a href="https://www.instagram.com/ashri30/" class="text-white fw-bold">Ashri Riswandi Djamil</a></p>
     </footer>
     <!-- Akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
