menambah salah satu foto di gallery

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="row justify-content-center">
           <div class="col-md-3">
             <a href="#">
-              <img src="img/Gallery/thumbnail/1.jpg" alt="Gambar 1" class="img-fluid gallery-img" />
+              <img src="img/Gallery/thumbnail/11.jpg" alt="Gambar 1" class="img-fluid gallery-img" />
             </a>
           </div>
           <div class="col-md-3">
