mengubah logo baru

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <img src="img/Logo new white.jpeg" width="50" height="30" href="#Home" />
+        <img src="img/Logo_new_white-removebg.png" width="50" height="30" href="#Home" />
 
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
