--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/saya_ai.jpg" alt="Ashri Riswandi" width="150" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Ashri Riswandi Djamil</h1>
+      <h1 class="display-4">Ashri Riswandi</h1>
       <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
